--- a/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/ConsoleApplication1/ConsoleApplication1.csproj
@@ -39,6 +39,7 @@
     <ItemGroup>
         <Compile Include="25 .cs" />
         <Compile Include="Program.cs"/>
+        <Compile Include="zadacha.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
